--- a/QuanLyThuVien/BUS/BUS.csproj
+++ b/QuanLyThuVien/BUS/BUS.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="LoaiSachBUS.cs" />
     <Compile Include="NganhKhoaBUS.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TacGiaBUS.cs" />
