--- a/QuanLyThuVien/BUS/BUS.csproj
+++ b/QuanLyThuVien/BUS/BUS.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="LoaiSachBUS.cs" />
     <Compile Include="NganhKhoaBUS.cs" />
+    <Compile Include="NhaXuatBanBUS.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TacGiaBUS.cs" />
   </ItemGroup>
