--- a/QuanLyThuVien/DAO/DAO.csproj
+++ b/QuanLyThuVien/DAO/DAO.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="LoaiSachDAO.cs" />
     <Compile Include="NganhKhoaDAO.cs" />
+    <Compile Include="NhaXuatBanDAO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TacGiaDAO.cs" />
   </ItemGroup>
