--- a/QuanLyThuVien/DACK-PTTKPM/DACK-PTTKPM.csproj
+++ b/QuanLyThuVien/DACK-PTTKPM/DACK-PTTKPM.csproj
@@ -331,6 +331,9 @@
   <ItemGroup>
     <Resource Include="images\tac-gia.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="images\no-image.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
