--- a/QuanLyThuVien/DTO/Properties/Settings.settings
+++ b/QuanLyThuVien/DTO/Properties/Settings.settings
@@ -5,10 +5,10 @@
     <Setting Name="QLThuVienConnectionString" Type="(Connection string)" Scope="Application">
       <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
 &lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
-  &lt;ConnectionString&gt;Data Source=DESKTOP-RJTPAIM;Initial Catalog=QLThuVien;Integrated Security=True;Encrypt=False;TrustServerCertificate=True&lt;/ConnectionString&gt;
+  &lt;ConnectionString&gt;Data Source=DESKTOP-G0Q133G\SQLEXPRESS;Initial Catalog=QLThuVien;Persist Security Info=True;User ID=sa;Password=1234&lt;/ConnectionString&gt;
   &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
-      <Value Profile="(Default)">Data Source=DESKTOP-RJTPAIM;Initial Catalog=QLThuVien;Integrated Security=True;Encrypt=False;TrustServerCertificate=True</Value>
+      <Value Profile="(Default)">Data Source=DESKTOP-G0Q133G\SQLEXPRESS;Initial Catalog=QLThuVien;Persist Security Info=True;User ID=sa;Password=1234</Value>
     </Setting>
   </Settings>
 </SettingsFile>
