Thông báo lỗi khi thêm sách vào phiếu mượn

--- a/QuanLyThuVien/DACK-PTTKPM/DACK-PTTKPM.csproj
+++ b/QuanLyThuVien/DACK-PTTKPM/DACK-PTTKPM.csproj
@@ -60,6 +60,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="converter\SoSanhHaiSoConverter.cs" />
+    <Compile Include="converter\SoSanhVoiMotSoConverter.cs" />
+    <Compile Include="custom_template\DataGridNumericColumn.cs" />
     <Compile Include="UC\TextboxNumber.xaml.cs">
       <DependentUpon>TextboxNumber.xaml</DependentUpon>
     </Compile>
