--- a/QuanLyThuVien/BUS/BUS.csproj
+++ b/QuanLyThuVien/BUS/BUS.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ChiTietPhieuMuonBUS.cs" />
     <Compile Include="DocGiaBUS.cs" />
     <Compile Include="LoaiSachBUS.cs" />
     <Compile Include="NganhKhoaBUS.cs" />
