--- a/QuanLyThuVien/DTO/app.config
+++ b/QuanLyThuVien/DTO/app.config
@@ -4,7 +4,7 @@
     </configSections>
     <connectionStrings>
         <add name="DTO.Properties.Settings.QLThuVienConnectionString"
-            connectionString="Data Source=DESKTOP-G0Q133G\SQLEXPRESS;Initial Catalog=QLThuVien;Persist Security Info=True;User ID=sa;Password=1234"
+            connectionString="Data Source=DESKTOP-RJTPAIM;Initial Catalog=QLThuVien;Integrated Security=True;Connect Timeout=15;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
 </configuration>
