Thêm tình trạng sách, trả sách

--- a/QuanLyThuVien/DACK-PTTKPM/DACK-PTTKPM.csproj
+++ b/QuanLyThuVien/DACK-PTTKPM/DACK-PTTKPM.csproj
@@ -69,6 +69,7 @@
     <Compile Include="converter\KTDuSoLuongSachKhiSua.cs" />
     <Compile Include="converter\SoSanhHaiSoConverter.cs" />
     <Compile Include="converter\SoSanhVoiMotSoConverter.cs" />
+    <Compile Include="converter\TinhTrangPhieuMuonConverter.cs" />
     <Compile Include="custom_template\DataGridNumericColumn.cs" />
     <Compile Include="UC\TextboxNumber.xaml.cs">
       <DependentUpon>TextboxNumber.xaml</DependentUpon>
