--- a/QuanLyThuVien/DACK-PTTKPM/DACK-PTTKPM.csproj
+++ b/QuanLyThuVien/DACK-PTTKPM/DACK-PTTKPM.csproj
@@ -140,6 +140,9 @@
     <Compile Include="_report\BaoCaoDocGiaDangKy.xaml.cs">
       <DependentUpon>BaoCaoDocGiaDangKy.xaml</DependentUpon>
     </Compile>
+    <Compile Include="_report\BaoCaoDocGiaViPham.xaml.cs">
+      <DependentUpon>BaoCaoDocGiaViPham.xaml</DependentUpon>
+    </Compile>
     <Compile Include="_report\BaoCaoSachMuon.xaml.cs">
       <DependentUpon>BaoCaoSachMuon.xaml</DependentUpon>
     </Compile>
@@ -257,6 +260,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="_report\BaoCaoDocGiaViPham.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="_report\BaoCaoSachMuon.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -285,9 +292,11 @@
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <EmbeddedResource Include="_report\BaoCaoDocGiaDangKy.rdlc" />
+    <EmbeddedResource Include="_report\BaoCaoDocGiaViPham.rdlc" />
     <EmbeddedResource Include="_report\BaoCaoSachConLai.rdlc" />
     <EmbeddedResource Include="_report\BaoCaoSachMuon.rdlc" />
     <None Include="Properties\DataSources\DTO.DocGia.datasource" />
+    <None Include="Properties\DataSources\DTO.DocGiaViPham.datasource" />
     <None Include="Properties\DataSources\DTO.Sach.datasource" />
     <None Include="Properties\DataSources\DTO.SoLuongSachMuon.datasource" />
     <None Include="Properties\Settings.settings">
