--- a/QuanLyThuVien/DACK-PTTKPM/DACK-PTTKPM.csproj
+++ b/QuanLyThuVien/DACK-PTTKPM/DACK-PTTKPM.csproj
@@ -74,6 +74,9 @@
     <Compile Include="UC\TextboxNumber.xaml.cs">
       <DependentUpon>TextboxNumber.xaml</DependentUpon>
     </Compile>
+    <Compile Include="_dangnhap\WindowDangNhap.xaml.cs">
+      <DependentUpon>WindowDangNhap.xaml</DependentUpon>
+    </Compile>
     <Compile Include="_qldocgia\WindowSuaDocGia.xaml.cs">
       <DependentUpon>WindowSuaDocGia.xaml</DependentUpon>
     </Compile>
@@ -150,6 +153,10 @@
       <DependentUpon>BaoCaoSachConLai.xaml</DependentUpon>
     </Compile>
     <Page Include="UC\TextboxNumber.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="_dangnhap\WindowDangNhap.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
